src/objects/Instant_Surveys__c.object
<CustomObject>
    <description>Object for Instant Surveys feedback from cases</description>
    <fields>
        <fullName>Additional_comments_optional__c</fullName>
        <inlineHelpText>Additional comments customer may give</inlineHelpText>
        <label>Additional comments (optional)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CX_CES_Dissatisfaction__c</fullName>
        <formula>case ( CX_Easy_Resolution_CES__c , &quot;Very satisfied&quot;, 0, &quot;Somewhat satisfied&quot;, 0, &quot;Very dissatisfied&quot;, 1, &quot;Somewhat dissatisfied&quot;, 1 , -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CX CES Dissatisfaction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CX_CES_Satisfaction_Weighted__c</fullName>
        <formula>case(X2015_CES__c,&quot;0&quot;,0,&quot;1&quot;,0.1,&quot;2&quot;,0.2,&quot;3&quot;,0.3,&quot;4&quot;,0.4,&quot;5&quot;,0.5,&quot;6&quot;,0.6,&quot;7&quot;,0.7,&quot;8&quot;,0.8,&quot;9&quot;,0.9,&quot;10&quot;,1, 
case (CX_Easy_Resolution_CES__c , &quot;Very satisfied&quot;, 1, &quot;Somewhat satisfied&quot;, 0.67, &quot;Very dissatisfied&quot;, 0, &quot;Somewhat dissatisfied&quot;, 0.34 , -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CX CES Satisfaction Weighted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CX_CES_Satisfaction__c</fullName>
        <formula>case (CX_Easy_Resolution_CES__c , &quot;Very satisfied&quot;, 1, &quot;Somewhat satisfied&quot;, 1, &quot;Very dissatisfied&quot;, 0, &quot;Somewhat dissatisfied&quot;, 0 , -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CX CES Satisfaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CX_CSR_Quality__c</fullName>
        <formula>case (CX_Quality_of_CSR__c , &quot;Very satisfied&quot;, 1, &quot;Somewhat satisfied&quot;, 0.67, &quot;Very dissatisfied&quot;, 0, &quot;Somewhat dissatisfied&quot;, 0.34 , -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CX CSR Quality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CX_Clear_Communication__c</fullName>
        <label>CX Clear Communication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CX_Communication__c</fullName>
        <formula>case(X2015_Communication_Satisfaction__c,&quot;0&quot;,0,&quot;1&quot;,0.1,&quot;2&quot;,0.2,&quot;3&quot;,0.3,&quot;4&quot;,0.4,&quot;5&quot;,0.5,&quot;6&quot;,0.6,&quot;7&quot;,0.7,&quot;8&quot;,0.8,&quot;9&quot;,0.9,&quot;10&quot;,1, 
case (CX_Clear_Communication__c , &quot;Very satisfied&quot;, 1, &quot;Somewhat satisfied&quot;, 0.67, &quot;Very dissatisfied&quot;, 0, &quot;Somewhat dissatisfied&quot;, 0.34 , -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CX Communication</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CX_Dissatisfaction__c</fullName>
        <formula>case ( CX_Overall_Satisfaction__c , &quot;Very satisfied&quot;, 0, &quot;Somewhat satisfied&quot;, 0, &quot;Very dissatisfied&quot;, 1, &quot;Somewhat dissatisfied&quot;, 1 , -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CX Dissatisfaction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CX_Easy_Resolution_CES__c</fullName>
        <label>CX Easy Resolution (CES)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CX_NPS_Detractor__c</fullName>
        <formula>case (CX_NPS_rating__c, &quot;0&quot;, 1, &quot;1&quot;, 1, &quot;2&quot;, 1, &quot;3&quot;, 1, &quot;4&quot;, 1, &quot;5&quot;, 1, &quot;6&quot;, 1, &quot;7&quot;, 0, &quot;8&quot;, 0, &quot;9&quot;, 0, &quot;10&quot;, 0, -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CX NPS Detractor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CX_NPS_Promoter__c</fullName>
        <formula>case (CX_NPS_rating__c, &quot;0&quot;, 0, &quot;1&quot;, 0, &quot;2&quot;, 0, &quot;3&quot;, 0 , &quot;4&quot;, 0 , &quot;5&quot;, 0 , &quot;6&quot;, 0 , &quot;7&quot;, 0 , &quot;8&quot;, 0 , &quot;9&quot;, 1 , &quot;10&quot;, 1 , -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CX NPS Promoter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CX_NPS_rating__c</fullName>
        <inlineHelpText>0 meaning the least recommendable - 10 meaning the most recommendable</inlineHelpText>
        <label>CX NPS rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CX_Overall_Satisfaction__c</fullName>
        <label>CX Overall Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CX_Quality_of_CSR__c</fullName>
        <label>CX Quality of CSR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CX_Satisfaction_Weighted__c</fullName>
        <formula>case(X2015_Overall_Satisfaction__c,&quot;0&quot;,0,&quot;1&quot;,0.1,&quot;2&quot;,0.2,&quot;3&quot;,0.3,&quot;4&quot;,0.4,&quot;5&quot;,0.5,&quot;6&quot;,0.6,&quot;7&quot;,0.7,&quot;8&quot;,0.8,&quot;9&quot;,0.9,&quot;10&quot;,1,
case (CX_Overall_Satisfaction__c , &quot;Very satisfied&quot;, 1, &quot;Somewhat satisfied&quot;, 0.67, &quot;Very dissatisfied&quot;, 0, &quot;Somewhat dissatisfied&quot;, 0.34 , -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CX Satisfaction Weighted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CX_Satisfaction__c</fullName>
        <formula>case (CX_Overall_Satisfaction__c , &quot;Very satisfied&quot;, 1, &quot;Somewhat satisfied&quot;, 1, &quot;Very dissatisfied&quot;, 0, &quot;Somewhat dissatisfied&quot;, 0 , -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CX Satisfaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Area__c</fullName>
        <formula>TEXT(Relationship_to_Case__r.CaseArea__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_ID__c</fullName>
        <formula>Relationship_to_Case__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat_Agent_Experience__c</fullName>
        <description>Field used in Live Agent post chat survey</description>
        <label>Chat Agent Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chat_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Chat agent to whom the survey refers to</description>
        <label>Chat Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Instant_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chat_Channel__c</fullName>
        <label>Chat Preferred Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Portal enquiry</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Frequently Asked Questions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chat_comment__c</fullName>
        <description>Field used in Live Agent post chat survey</description>
        <label>Chat comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clarity_of_response__c</fullName>
        <inlineHelpText>Rating on clarity of response given from CSR to customer</inlineHelpText>
        <label>Clarity of response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very satisified</fullName>
                </value>
                <value>
                    <fullName>Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Instant Surveys</relationshipLabel>
        <relationshipName>Instant_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Courtesy_and_friendliness__c</fullName>
        <inlineHelpText>Rating on CSR&apos;s courtesy and friendliness by customer</inlineHelpText>
        <label>Courtesy and friendliness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dissatisfaction__c</fullName>
        <formula>case ( Overall_satisfaction__c , &quot;Very satisfied&quot;, 0, &quot;Somewhat satisfied&quot;, 0, &quot;Very dissatisfied&quot;, 1, &quot;Somewhat dissatisfied&quot;, 1 , -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dissatisfaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Espiritu_NPS_rating_on_FDS_OPS__c</fullName>
        <label>Espiritu - NPS rating on FDS-OPS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Espiritu_One_change_to_improve_FDS_OPS__c</fullName>
        <label>Espiritu - One change to improve FDS-OPS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Espiritu_X_team_collaboration_rating__c</fullName>
        <label>Espiritu - X-team collaboration rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IATA_procedures_and_resolutions__c</fullName>
        <inlineHelpText>Rating on perception of IATA procedures and resolutions by customer</inlineHelpText>
        <label>IATA procedures and resolutions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very satisified</fullName>
                </value>
                <value>
                    <fullName>Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Knowledge_and_competence__c</fullName>
        <inlineHelpText>Rating on perception of CSR&apos;s knowledge and competence by customer</inlineHelpText>
        <label>Knowledge and competence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPS_Comments__c</fullName>
        <label>NPS Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_performance__c</fullName>
        <inlineHelpText>Rating on CSR&apos;s overall performance by customer</inlineHelpText>
        <label>Overall performance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very satisified</fullName>
                </value>
                <value>
                    <fullName>Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_satisfaction__c</fullName>
        <inlineHelpText>Rating on customer&apos;s overall satisfaction of management of his/her case by IATA</inlineHelpText>
        <label>Overall satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Somewhat satisfied</fullName>
                    <color>#78C953</color>
                    <label>Somewhat satisfied</label>
                </value>
                <value>
                    <fullName>Somewhat dissatisfied</fullName>
                    <color>#FF9900</color>
                    <label>Somewhat dissatisfied</label>
                </value>
                <value>
                    <fullName>Very dissatisfied</fullName>
                    <color>#FF6666</color>
                    <label>Very dissatisfied</label>
                </value>
                <value>
                    <fullName>Very satisfied</fullName>
                    <color>#33CC00</color>
                    <label>Very satisfied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <formula>TEXT(Relationship_to_Case__r.Reason1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasons_for_Dissatisfaction__c</fullName>
        <inlineHelpText>Free text field within survey for customer to give feedback specifically if dissatsifed</inlineHelpText>
        <label>Reasons for Dissatisfaction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reasons_for_High_Satisfaction__c</fullName>
        <label>Reasons for High Satisfaction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to relate surveys to Accounts</description>
        <label>Relationship to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Instant Surveys</relationshipLabel>
        <relationshipName>Instant_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship to Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Instant Surveys</relationshipLabel>
        <relationshipName>Instant_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relevance_of_explanations__c</fullName>
        <inlineHelpText>Rating on relevance of explanations given by CSR to customer</inlineHelpText>
        <label>Relevance of explanations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very satisified</fullName>
                </value>
                <value>
                    <fullName>Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFACR_Added_value__c</fullName>
        <description>How would you rate the added value that this change has brought to the business</description>
        <inlineHelpText>How would you rate the added value that this change has brought to the business</inlineHelpText>
        <label>SFACR Added value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFACR_Communication__c</fullName>
        <description>How good was the communication content and communication process during and after the change?</description>
        <inlineHelpText>How good was the communication content and communication process during and after the change?</inlineHelpText>
        <label>SFACR Communication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFACR_Documentation_Satisfaction__c</fullName>
        <description>How satisfied are you with the material or documentation provided</description>
        <inlineHelpText>How satisfied are you with the material or documentation provided</inlineHelpText>
        <label>SFACR Documentation Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFACR_NPS__c</fullName>
        <description>Finally how likely would you recommend working with our team for developments, where 0 is Not at all, and 10 is Very much.</description>
        <inlineHelpText>Finally how likely would you recommend working with our team for developments, where 0 is Not at all, and 10 is Very much.</inlineHelpText>
        <label>SFACR NPS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFACR_Personal_touch__c</fullName>
        <description>How easy was dealing with us team and how good our personal touch</description>
        <inlineHelpText>How easy was dealing with us team and how good our personal touch</inlineHelpText>
        <label>SFACR Personal touch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFACR_Quality_Satisfaction__c</fullName>
        <description>Salesforce ACR Survey process</description>
        <inlineHelpText>Rates the general satisfaction with the delivered product by the salesforce ACR</inlineHelpText>
        <label>SFACR Quality Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Unsatisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Unsatisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFACRtimeandspeed__c</fullName>
        <description>SF ACR process</description>
        <inlineHelpText>rates satisfaction with the time management of the Salesforce change request.</inlineHelpText>
        <label>SFACR Time and speed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Satisfaction__c</fullName>
        <description>To evaluate the satisfaction rate</description>
        <formula>case (Overall_satisfaction__c , &quot;Very satisfied&quot;, 1, &quot;Somewhat satisfied&quot;, 1, &quot;Very dissatisfied&quot;, 0, &quot;Somewhat dissatisfied&quot;, 0 , -1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Satisfaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speed_and_efficiency__c</fullName>
        <inlineHelpText>Rating on CSR&apos;s speed and efficiency by customer</inlineHelpText>
        <label>Speed and efficiency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very satisified</fullName>
                </value>
                <value>
                    <fullName>Somewhat satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SurveyURL__c</fullName>
        <label>SurveyURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyUserID__c</fullName>
        <label>SurveyUserID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Fix value 1 (used to count)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>